refs #新建工程及测试代码等

--- a/EditImageGPSDemo/Info.plist
+++ b/EditImageGPSDemo/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>@&quot;请允许使用相册功能&quot;</string>
+	<key>NSCameraUsageDescription</key>
+	<string>@&quot;请允许使用相册功能&quot;</string>
 </dict>
 </plist>
